--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -3,10 +3,9 @@ $primary: #ce2127;
 $dark: #212121;
 $theme1: #33a8d1;
 
-@import "node_modules/bootstrap/scss/_functions";
-@import "node_modules/bootstrap/scss/_variables";
-@import "node_modules/bootstrap/scss/_mixins";
-@import "node_modules/bootstrap/scss/mixins/_breakpoints.scss";
+@import "node_modules/bootstrap/scss/functions";
+@import "node_modules/bootstrap/scss/variables";
+@import "node_modules/bootstrap/scss/mixins";
 
 // add custom colors to the bootstrap theme
 $custom-theme-colors: (
@@ -36,3 +35,5 @@ $link-color: $theme1;
 // Load a custom font
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,600;1,400;1,600&display=swap');
 
+
+@import 'modules/footer-module';
