--- a/assets/scss/components/footer-comp.scss
+++ b/assets/scss/components/footer-comp.scss
@@ -8,8 +8,8 @@
     ul.nav {
         white-space: nowrap;
         flex-wrap: nowrap;
-        align-items: flex-start;
-        justify-content: flex-start;
+        align-items: center;
+        justify-content: center;
     }
     .nav-link {
         padding: 0.5rem 0.5rem;
