--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -36,4 +36,4 @@ $link-color: $theme1;
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,600;1,400;1,600&display=swap');
 
 
-@import 'modules/footer-module';
+@import 'components/footer-comp';
